--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <h1>Etch-A-Sketch</h1>
+  <button id="resizeButton">Set Grid Size</button>
   <div id="grid"></div>
 
   <script src="script.js"></script>
