--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Etch-A-Sketch</h1>
-  <button id="resizeButton">Set Grid Size</button>
-  <div id="grid"></div>
+  <main>
+    <h1>Etch-A-Sketch</h1>
+    <div id="controls">
+      <button id="resizeButton">Set Grid Size</button>
+    </div>
+    
+    <div id="grid"></div>
+  </main>
 
   <script src="script.js"></script>
 </body>
